aula 11 - diretivas customizadas aula 12 - requisições com $http

--- a/aula11.html
+++ b/aula11.html
@@ -16,6 +16,8 @@
         </ul>
 
         <p>cabeçalho da pagina</p>
+
+        <!--na linha abaixo será injetado o conteudo de outras páginas-->
         <div ng-view>
 
         </div>
